-----Etherate 1.17 2018-04

[MINOR] Fixed issue #50; Frame order detection is wrong

[FEATURE] Added enhancement #49; Update compile checks

[MAJOR] Fixed issue #48; Rx loop for speed test is missing pointer reference

[MAJOR] Fixed issue #47; Unsafe reference

[MAJOR] Fixed issue #46; "Message too long" when running test

[MINOR] Fixed issue #44; The average FPS and max FPS are always the same

[FEATURE] Added enhancement #43; Replace sendto() with send()

[MINOR] Fixed issue #42; -h option says "on the wire"

[MINOR] Fixed issue #39; -l option requires sudo

[MINOR] Fixed issue #36; Kernel version checks on CentOS

[MINOR] Fixed issue #9; fail to compile on AlpineLinux

[MINOR] Various calloc() calls were missing a return value check

[MINOR] Correct some typos in the code and more cody tidying



-----Etherate 1.16 2018-01

[FEATURE] Added enhancement #38; Remove -fstack-protector-all compile flag

[FEATURE] Added enhancement #37; Add packet pacing feature

[MINOR] Correct some typos in the code and more cody tidying



-----Etherate 1.15 2017-10

[FEATURE] Added enhancement #35; Add test stats output when stopping with CTRL+C

[MINOR] Fixed issue #34; MTU test frame count

[MINOR] Fixed issue #27; VLAN tag not included frame size and rate limit

[MINOR] Fixed issue #26; Rx host shows Rx rate lower that Tx host's Tx rate

[MINOR] Fixed issue #24; Doubling of stats on Rx host

[MINOR] Code tidy up with typos and styling



-----Etherate 1.14 2017-09

[MAJOR] Fixed issue 22; Test not starting



-----Etherate 0.13 Beta 2017-07

[FEATURE] Added enhancement #20; Test if interface is IFF_UP && IFF_RUNNING

[MAJOR] Fixed issue #19; Quality Tests are stil very buggy

[MINOR] Fixed issue #23; Regression bug with speed limit display on Rx host

[MINOR] Fixed issue #11; Uneeded +1 with result print on latency_test()

[MINOR] Updated documentation regarding usage and troubleshooting
